<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sdl.hellosdlandroid.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/txtAppId"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="left"
            android:layout_marginTop="15dp"
            android:text="@string/app_id_request"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold|italic"
            android:textColor="@color/design_default_color_primary"/>

        <EditText
            android:id="@+id/appIdInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/txtAppId"
            android:ems="8"
            android:text="@string/app_id"
            android:inputType="text"
            android:textCursorDrawable="@null"></EditText>

        <TextView
            android:id="@+id/app_hmi_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtAppId"
            android:entries="@array/hmi_types_array"
            android:text="@string/app_hmi_type_prompt"
            android:prompt="@string/app_hmi_type_prompt"
            android:textColor="@color/design_default_color_primary"
            android:textStyle="bold|italic"/>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtAppId"
            android:layout_marginTop="-2dp"
            android:layout_toRightOf="@id/app_hmi_type"
            android:entries="@array/hmi_types_array"
            android:text="@string/app_hmi_type_prompt"
            android:prompt="@string/app_hmi_type_prompt" />

        <TextView
            android:id="@+id/tcpInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtAppId"
            android:gravity="left"
            android:layout_marginTop="30dp"
            android:text="@string/tcpinfo"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold|italic"
            android:textColor="#F00"/>

        <TextView
            android:id="@+id/txtIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tcpInfo"
            android:gravity="left"
            android:layout_marginTop="10dp"
            android:text="@string/ip"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold|italic"
            android:textColor="@color/design_default_color_primary"/>

        <EditText
            android:id="@+id/ipInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/txtIP"
            android:layout_marginTop="-5dp"
            android:layout_below="@id/tcpInfo"
            android:ems="7"
            android:inputType="text"
            android:textCursorDrawable="@null"></EditText>

        <TextView
            android:id="@+id/txtPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtIP"
            android:layout_marginTop="15dp"
            android:gravity="left"
            android:text="@string/port"
            android:textStyle="bold|italic"
            android:textColor="@color/design_default_color_primary"/>

        <EditText
            android:id="@+id/portInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ipInput"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:layout_toRightOf="@id/txtPort"
            android:ems="5"
            android:inputType="number"
            android:text="@integer/port_number"
            android:textCursorDrawable="@null"></EditText>

        <Button
            android:id="@+id/startProxy"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/appIdInput"
            android:onClick="startProxy"
            android:text="@string/start_proxy"
            android:textSize="10dp" />

    </RelativeLayout>


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/gasd"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:onClick="getAppServiceData"
                android:text="@string/get_appservice_data"
                android:textSize="10dp" />

            <Button
                android:id="@+id/pasi"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:onClick="performAppServiceInteraction"
                android:text="@string/perfrom_appservice_interaction"
                android:textSize="10dp" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/sendloc"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:onClick="sendLocation"
                android:text="@string/send_location"
                android:textSize="10dp" />

            <Button
                android:id="@+id/button_press"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:onClick="buttonPress"
                android:text="@string/button_press"
                android:textSize="10dp" />
        </TableRow>
    </TableLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/terminalOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"
            android:gravity="left"
            android:minLines="35"
            android:scrollbars="vertical"
            android:text="@string/log"></TextView>

    </LinearLayout>

</LinearLayout>
